adding canvas fallback images

--- a/src/_includes/company/global-reach-map.html
+++ b/src/_includes/company/global-reach-map.html
@@ -28,6 +28,10 @@
 </script>
 <canvas id="global-map" class="canvas-animation" style="background-color:#FFFFFF"></canvas>
 
+<div class="image-mobile">
+  <div class="image"><img class="img-fluid" src="/images/company/map.png"></div>
+</div>
+
 <div class="image-slice" id="company-global-reach">
   <div class="image"><img class="img-fluid" src="/images/company/5.jpg"></div>
 </div>
