--- a/src/_includes/company/production-capacity-evolution.html
+++ b/src/_includes/company/production-capacity-evolution.html
@@ -28,6 +28,10 @@
 </script>
 <canvas id="production-chart" class="canvas-animation" width="1146" height="466" ></canvas>
 
+<div class="image-mobile">
+  <div class="image image--mobile"><img class="img-fluid" src="/images/company/About.png"></div>
+</div>
+
 <div class="image-slice" id="company-about-astir">
   <div class="image"><img class="img-fluid" src="/images/company/1.jpg"></div>
 </div>
