--- a/src/_includes/company/revenues-evoution.html
+++ b/src/_includes/company/revenues-evoution.html
@@ -28,7 +28,10 @@
 </script>
 <canvas id="revenue-chart" class="canvas-animation" width="1146" height="466" ></canvas>
 
-
+<div class="image-mobile">
+  <div class="image"><img class="img-fluid" src="/images/company/Facts-1.png"></div>
+  <div class="image"><img class="img-fluid" src="/images/company/Facts-2.png"></div>
+</div>
 <div class="image-slice" id="company-facts">
   <div class="image"><img class="img-fluid" src="/images/company/3.jpg"></div>
 </div>
