--- a/src/_includes/facilities/thinkgreen.html
+++ b/src/_includes/facilities/thinkgreen.html
@@ -55,3 +55,7 @@
 })();
 </script>
 <canvas id="thinkgreen-canvas" class="canvas-animation" width="430" height="407" style=""></canvas>
+
+<div class="image-mobile">
+  <div class="image"><img class="img-fluid" src="/images/facilities/3.jpg"></div>
+</div>
