--- a/src/assets/scss/bootstrap/bootstrap.scss
+++ b/src/assets/scss/bootstrap/bootstrap.scss
@@ -12,7 +12,7 @@
 
 // Reset and dependencies
 @import "normalize";
-@import "print";
+//@import "print";
 
 // Core CSS
 @import "reboot";
@@ -20,18 +20,18 @@
 @import "images";
 @import "code";
 @import "grid";
-@import "tables";
+//@import "tables";
 @import "forms";
 @import "buttons";
 
 // Components
-@import "animation";
-@import "dropdown";
-@import "button-group";
-@import "input-group";
-@import "custom-forms";
-@import "nav";
-@import "navbar";
+//@import "animation";
+//@import "dropdown";
+//@import "button-group";
+//@import "input-group";
+//@import "custom-forms";
+//@import "nav";
+//@import "navbar";
 //@import "card";
 //@import "breadcrumb";
 //@import "pagination";
