--- a/src/_includes/section.html
+++ b/src/_includes/section.html
@@ -4,7 +4,12 @@
     {% if node.includeArea %}
       {% include {{ node.includeArea }} %}
     {% endif %}
-    
+    {% if node.mobileImage %}
+      <div class="image-mobile">
+        <div class="image"><img class="img-fluid" src="{{ node.mobileImage }}"></div>
+      </div>
+    {% endif %}
+
     {% if node.image %}
       <div class="js-waypoint-image">
         <div class="image"><img class="img-fluid" src="{{ node.image }}"></div>
