--- a/src/_layouts/company/company.html
+++ b/src/_layouts/company/company.html
@@ -18,7 +18,7 @@ layout: default
   {% else %}
     {% include slice.html param=companyItem %}
     {% if companyItem.includeArea %}
-      {% include {{companyItem.includeArea}} %}
+      {% include {{companyItem.includeArea}} param=companyItem %}
     {% endif %}
   {% endif %}
 {% endfor %}
