adding circle animation

--- a/src/_includes/company/revenues-evoution.html
+++ b/src/_includes/company/revenues-evoution.html
@@ -34,7 +34,7 @@
 
   // resize the canvas to fill browser window dynamically
   // window.addEventListener('resize', globalMapInit, false);
-  window.revenueInit = function() {
+  window.circlesInit = function() {
   	canvas = document.getElementById("circles-chart");
     var w = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
     //canvas.width  = w;
