fixing canvas animations

--- a/src/_includes/company/revenues-evoution.html
+++ b/src/_includes/company/revenues-evoution.html
@@ -1,22 +1,48 @@
-<script src="{{site.url}}{{site.canvasLocation}}/company/revenues/revenues.js"></script>
+<script id="revenues" src="{{site.url}}{{site.canvasLocation}}/company/revenues/revenues.js"></script>
 <script src="{{site.url}}{{site.canvasLocation}}/company/circles/circles.js"></script>
 <script type="text/javascript">
 (function() {
   var canvas, stage, exportRoot;
+
+  // Get location of current script,
+  // Used to provide absolute position for resources.
+  var scriptPath = function () {
+	  var scripts = document.getElementById('revenues');
+	  var path = '';
+	  if(scripts.src && scripts.src.match(/\/revenues\.js$/)) {
+	    path = scripts.src.replace(/(.*)\/revenues\.js$/, '$1');
+	  }
+	  return path;
+  };
 
   // resize the canvas to fill browser window dynamically
   // window.addEventListener('resize', globalMapInit, false);
   window.revenueInit = function() {
   	canvas = document.getElementById("revenue-chart");
     var w = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
-    //canvas.width  = w;
-    //canvas.height = w * (1146/466); //aspect ratio 1146*466
-  	globalMapDraw(canvas);
+    images = images||{};
+
+    // Change the source of the assets, so as to point to the
+		// location of the js file.
+		libRevenues.properties.manifest.forEach(function(currentValue){
+			// Only process if the scriptPath is not already set.
+			if(currentValue.src.indexOf('http') != 0){
+				currentValue.src = scriptPath() + '/' + currentValue.src;
+			}
+		});
+
+  	var loader = new createjs.LoadQueue(false);
+  	loader.addEventListener("fileload", handleFileLoad);
+  	loader.addEventListener("complete", handleComplete);
+  	loader.loadManifest(libRevenues.properties.manifest);
   }
 
-  function globalMapDraw(e) {
-    var canvas = e;
-    exportRoot = new libRevenues.revenues();
+  function handleFileLoad(evt) {
+  	if (evt.item.type == "image") { images[evt.item.id] = evt.result; }
+  }
+
+  function handleComplete() {
+  	exportRoot = new libRevenues.revenues();
 
   	stage = new createjs.Stage(canvas);
   	stage.addChild(exportRoot);
@@ -37,13 +63,6 @@
   window.circlesInit = function() {
   	canvas = document.getElementById("circles-chart");
     var w = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
-    //canvas.width  = w;
-    //canvas.height = w * (1146/466); //aspect ratio 1146*466
-  	globalMapDraw(canvas);
-  }
-
-  function globalMapDraw(e) {
-    var canvas = e;
     exportRoot = new libcircles.circles();
 
   	stage = new createjs.Stage(canvas);
