--- a/src/assets/scss/layout/layout-stacked/_layout-stacked.scss
+++ b/src/assets/scss/layout/layout-stacked/_layout-stacked.scss
@@ -10,4 +10,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+  // Set padding when max width reached
+  @media only screen and (min-width:0) and (max-width: $container-medium)  {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
