--- a/src/assets/scss/base/_misc.scss
+++ b/src/assets/scss/base/_misc.scss
@@ -80,6 +80,10 @@ body {
     column-gap: 2rem;
     max-width: $content-wrapper-max-width;
     text-align: left;
+    @media only screen and (min-width:0) and (max-width: $two-column-breakpoint)  {
+      column-count: 1;
+      column-gap: 0;
+    }
   }
   // Adding extra spacing to image
   .image {
