--- a/src/assets/scss/components/section/_section.scss
+++ b/src/assets/scss/components/section/_section.scss
@@ -13,7 +13,10 @@
   &.viewport-height {
     height: 100%;
     min-height: 476px;
-    //center only within a viewport-height element
+    // center only within a viewport-height element
+    @media only screen and (min-width:0) and (max-width: $two-column-breakpoint)  {
+      height: auto;
+    }
     .content-wrapper,
     .image {
       //  Might want to add class for this
