--- a/src/assets/scss/components/video/_video.scss
+++ b/src/assets/scss/components/video/_video.scss
@@ -14,6 +14,12 @@
       top: 50%;
       opacity: 1;
     }
+
+    // Set padding when max width reached
+    @media only screen and (min-width:0) and (max-width: $container-medium)  {
+      padding-left: 5%;
+      padding-right: 5%;
+    }
   }
 
   &__tag {
@@ -62,6 +68,8 @@
     margin: 0 auto;
     padding-top: .5rem;
     padding-bottom: 1rem;
+
+
   }
 
   &__watch-full-video {
