--- a/src/assets/scss/layout/layout-two-column/_layout-two-column.scss
+++ b/src/assets/scss/layout/layout-two-column/_layout-two-column.scss
@@ -9,6 +9,12 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+
+    // Set padding when max width reached.
+    @media only screen and (min-width:0) and (max-width: $content-wrapper-max-width)  {
+      padding-left: 5%;
+      padding-right: 5%;
+    }
   }
 
   &.vertically-centered {
@@ -33,10 +39,18 @@
     display: flex;
     flex-direction: column;
 
-
     + .column {
       padding-left: 5%;
       padding-right: 0;
+    }
+
+    // Single column.
+    @media only screen and (min-width:0) and (max-width: $two-column-breakpoint)  {
+      width: 100%;
+      padding-right: 0;
+      + .column {
+        padding-left: 0;
+      }
     }
 
     // When image is after column it should take up the whole width.
