--- a/src/assets/scss/hamburgers/_sass/hamburgers/hamburgers.scss
+++ b/src/assets/scss/hamburgers/_sass/hamburgers/hamburgers.scss
@@ -9,13 +9,14 @@
 
 // Settings
 // ==================================================
-$hamburger-padding-x                       : 15px !default;
-$hamburger-padding-y                       : 15px !default;
+$hamburger-padding-x                       : 0px !default;
+$hamburger-padding-y                       : 0px !default;
 $hamburger-layer-width                     : 40px !default;
 $hamburger-layer-height                    : 4px !default;
 $hamburger-layer-spacing                   : 6px !default;
 $hamburger-layer-color                     : #fff !default;
-$hamburger-layer-border-radius             : 4px !default;
+$hamburger-layer-color-dark                : #000 !default;
+$hamburger-layer-border-radius             : 0px !default;
 $hamburger-hover-opacity                   : 0.7 !default;
 $hamburger-hover-transition-duration       : 0.15s !default;
 $hamburger-hover-transition-timing-function: linear !default;
