Adding responsive handling

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -51,7 +51,7 @@
       <div class="container footer__attribution">
         <div class="row">
           <div class="footer__item col-sm-6"><div class="text text--small">Copyright Astir Vitogiannis {{ site.time | date: '%Y' }}<br/>All Rights Reserved</div></div>
-          <div class="footer__item col-sm-6"><div class="text text--small"><a class="footer__link footer__link--credits" href="http://www.pointblank.gr" target="_blank"><span>Website created by</span< Point Blank</a><br/><a class="footer__link" href="http://www.pointblank.gr" target="_blank">More Credits</a></div>
+          <div class="footer__item col-sm-6"><div class="text text--small"><a class="footer__link footer__link--credits" href="http://www.pointblank.gr" target="_blank"><span>Website created by</span> Point Blank</a><br/><a class="footer__link" href="http://www.pointblank.gr" target="_blank">More Credits</a></div>
         </div>
       </div>
     </div>
