--- a/src/assets/scss/components/slice/_slice.scss
+++ b/src/assets/scss/components/slice/_slice.scss
@@ -1,6 +1,6 @@
 .slice {
-  padding-top: 150px;
-  padding-bottom: 150px;
+  padding-top: 5rem;
+  padding-bottom: 3rem;
   background-repeat: no-repeat;
 
   &--with-centered-image {
