--- a/src/assets/scss/components/menu/_menu.scss
+++ b/src/assets/scss/components/menu/_menu.scss
@@ -33,12 +33,16 @@
     position: relative;
     top: 15%;
     width: 100%;
-    text-align: center;
-    margin-top: 30px;
+    text-align: center;    
+    ul,li {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
 }
 
 .overlay a {
-    padding: 8px;
+    padding: 0;
     text-decoration: none;
     font-size: 43px;
     color: $white;
