--- a/src/assets/scss/components/titles/_titles.scss
+++ b/src/assets/scss/components/titles/_titles.scss
@@ -4,6 +4,14 @@
   color: $brand-primary;
   margin-bottom: 1rem;
 
+  @include media-breakpoint-between(sm, md) {
+    //font-size: 1.5rem;
+  }
+  @include media-breakpoint-down(sm) {
+    //font-size: 1rem;
+  }
+  
+
   &--large {
     font-size: $font-size-lg;
   }
@@ -15,7 +23,7 @@
   &--small {
     font-size: $font-size-sm;
     font-family: $pf-light;
-    color: $gray-lighter;    
+    color: $gray-lighter;
   }
 
   &--block {
