--- a/src/_layouts/crown-corks/crown-corks.html
+++ b/src/_layouts/crown-corks/crown-corks.html
@@ -17,7 +17,7 @@ layout: default
       <div id="exterior-side-wrapper" style="background-image:url({{ crownItem.bgImage }}); background-position: {{ crownItem.bgImagePosition }}; background-size: {{ crownItem.bgImageSize }};">
       {% include section.html param=crownItem %}
       <div class="container">
-        <div class="row layout-two-column">
+        <div class="row">
         {% for exteriorItems in site.data.exterior[langcode] %}
           {% assign exteriorItem = exteriorItems[1] %}
             {% if exteriorItem.id == 'exterior-diferrence' %}
@@ -45,5 +45,5 @@ layout: default
 {% endfor %}
 {% for productItems in site.data.products[langcode] %}
   {% assign productItem = productItems[1] %}
-    {% include section.html param=productItem %}
+    {% include section-crown-corks.html param=productItem %}
 {% endfor %}
