adding some more

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,5 +1,5 @@
 {% assign langcode = page.lang %}
-<footer class="footer clearfix">
+<footer class="footer clearfix on-dark-color">
   <div class="container-fluid">
     <div class="row">
       <div class="container">
