--- a/src/_includes/video.html
+++ b/src/_includes/video.html
@@ -8,6 +8,7 @@
       </video>
       <div style="display:none" class=""><img src="{{site.url}}{{ video.videoPoster }}" /></div>
       <div class="video__cover" style="background-image:url({{site.url}}{{ video.videoPoster }});"></div>
+      <div class="video__cover--mobile" style="display:none; background-image:url({{site.url}}{{ video.videoMobilePoster }});"></div>
       <div class="video__content">
         <h1 class="title">{{ video.title }}</h1>
         <h2 class="text">{{ video.subtitle }}</h2>
