--- a/src/_includes/request-form.html
+++ b/src/_includes/request-form.html
@@ -10,35 +10,43 @@
         <a href="{{ requestItem.buttonLink }}" class="btn {{ requestItem.buttonClasses }} {{ buttonFormClass }}">{{ requestItem.buttonText }}</a>
       </div>
   {% endfor %}
-  <div id="form-response" class="js-hidden text"></div>
+  <div id="form-response" class="js-hidden text text--centered"></div>
   <form accept-charset="UTF-8" id="request-form" action="{{ site.url }}/request.php" method="POST" class="on-brand-color request-form {{ formClass }}">
     <div class="container">
       <div id="webform-component-name" class="js-floating-label form-item is-floating-label">
-        <label for="edit-submitted-name">NAME </label>
-        <input type="text" class="form-text" maxlength="128" size="60" value="" name="name" id="edit-submitted-name">
+        <label for="edit-submitted-name">Your name / surname * </label>
+        <input type="text" class="form-text" maxlength="128" size="60" value="" name="name" id="edit-submitted-name" required="required">
         </div>
-      <div id="webform-component-surname" class="js-floating-label form-item is-floating-label">
-        <label for="edit-submitted-surname">SURNAME </label>
-        <input type="text" class="form-text" maxlength="128" size="60" value="" name="surname" id="edit-submitted-surname">
+      <div id="webform-component-company" class="js-floating-label form-item is-floating-label">
+        <label for="edit-submitted-company">Company’s name</label>
+        <input type="text" class="form-text" maxlength="128" size="60" value="" name="company" id="edit-submitted-company">
+      </div>
+      <div id="webform-component-position" class="js-floating-label form-item is-floating-label">
+        <label for="edit-submitted-position">Your position in the company</label>
+        <input type="text" class="form-text" maxlength="128" size="60" value="" name="position" id="edit-submitted-position">
       </div>
       <div id="webform-component-e-mail" class="js-floating-label form-item is-floating-label">
-        <label for="edit-submitted-e-mail">E-MAIL <span title="This field is required." class="form-required">*</span></label>
+        <label for="edit-submitted-e-mail">E-mail <span title="This field is required." class="form-required">*</span></label>
         <input type="email" size="60" name="e_mail" id="edit-submitted-e-mail" class="email form-text form-email required" required="required">
       </div>
       <div id="webform-component-telephone" class="js-floating-label form-item is-floating-label">
-        <label for="edit-submitted-telephone">TELEPHONE </label>
+        <label for="edit-submitted-telephone">Phone Number</label>
        <input type="text" class="form-text" maxlength="128" size="60" value="" name="telephone" id="edit-submitted-telephone">
       </div>
-      <div id="webform-component-message" class="js-floating-label form-item is-floating-label">
-        <label for="edit-submitted-message">MESSAGE <span title="This field is required." class="form-required">*</span></label>
-        <div class="form-textarea-wrapper"><textarea class="form-textarea required" rows="5" cols="60" name="message" id="edit-submitted-message" placeholder="Type your message" required="required"></textarea></div>
+      <div id="webform-component-address" class="js-floating-label form-item is-floating-label">
+        <label for="edit-submitted-address">Address</label>
+       <input type="text" class="form-text" maxlength="128" size="60" value="" name="address" id="edit-submitted-address">
+      </div>
+      <div id="webform-component-message" class="webform-component-textarea js-floating-label form-item is-floating-label">
+        <label for="edit-submitted-message">Message <span title="This field is required." class="form-required">*</span></label>
+        <div class="form-textarea-wrapper"><textarea class="form-textarea required" rows="5" cols="60" name="message" id="edit-submitted-message" required="required"></textarea></div>
       </div>
       <div id="webform-component-url" class="js-floating-label form-item is-floating-label">
         <label for="edit-submitted-url">URL </label>
         <input type="url" class="form-text ignore" maxlength="128" size="60" value="" name="url" id="edit-submitted-url" required>
       </div>
       <div class="form-actions clearfix">
-        <input type="submit" value="SEND" name="op" class="webform-submit btn btn-secondary form-submit">
+        <input type="submit" value="SUBMIT" name="op" class="webform-submit btn btn-secondary form-submit">
       </div>
     </div>
   </form>
