--- a/src/assets/scss/components/video/_video.scss
+++ b/src/assets/scss/components/video/_video.scss
@@ -32,6 +32,18 @@
     z-index: 1;
   }
 
+  &__cover--mobile{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: 2;
+    @media only screen and (min-width:0) and (max-width: $mobile-breakpoint)  {
+      display: block !important;
+    }
+  }
   &__cover {
       position: absolute;
       width: 100%;
@@ -45,6 +57,9 @@
       &.is-loaded {
         opacity: 0;
         z-index: -10;
+      }
+      @media only screen and (min-width:0) and (max-width: $mobile-breakpoint)  {
+        display: none !important;
       }
     }
 
@@ -101,7 +116,7 @@
 
 // Scroll down svg
 .scroll-down {
-  position: absolute;;
+  position: absolute;
   bottom: 10%;
   left: 50%;
   z-index: 101;
