--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -14,7 +14,7 @@
                 <li class="list__item">
                   {% comment %} escape URL so as to match in Greek {% endcomment %}
                   {% assign escapedURL = menuItem.url | uri_escape %}
-                  <a class="list__item__link {% if escapedURL  == page.url %}active{% endif %}" href="{{ site.url }}{{ menuItem.url }}">{{ menuItem.menuTitle }}</a>
+                  <a class="list__item__link {% if escapedURL  == page.url %}active{% endif %}" href="{{ site.url }}{{ menuItem.url }}">{{ menuItem.footerTitle }}</a>
                 </li>
               {% endfor %}
             </ul>
@@ -50,7 +50,7 @@
       </div>
       <div class="container footer__attribution">
         <div class="row">
-          <div class="footer__item col-sm-6"><div class="text text--small">Copyright Astir Vitogiannis {{ site.time | date: '%Y' }}<br/>All Rights Reserved</div></div>
+          <div class="footer__item col-sm-6"><div class="text text--small">&copy Astir Vitogiannis {{ site.time | date: '%Y' }}<br/>All Rights Reserved</div></div>
           <div class="footer__item col-sm-6"><div class="text text--small"><a class="footer__link footer__link--credits" href="http://www.pointblank.gr" target="_blank"><span>Website created by</span> Point Blank</a><br/><a class="footer__link" href="http://www.pointblank.gr" target="_blank">More Credits</a></div></div>
         </div>
       </div>
