--- a/src/assets/scss/components/section/_section.scss
+++ b/src/assets/scss/components/section/_section.scss
@@ -14,7 +14,7 @@
     height: 100%;
     min-height: 476px;
     // center only within a viewport-height element
-    @media only screen and (min-width:0) and (max-width: $two-column-breakpoint)  {
+    @include media-breakpoint-down(md) {
       height: auto;
       padding-top: 55px;
       padding-bottom: 55px;
