--- a/src/assets/scss/components/titles/_titles.scss
+++ b/src/assets/scss/components/titles/_titles.scss
@@ -5,15 +5,21 @@
   margin-bottom: 1rem;
 
   @include media-breakpoint-between(sm, md) {
-    //font-size: 1.5rem;
+    font-size: 3.2rem;
   }
   @include media-breakpoint-down(sm) {
-    //font-size: 1rem;
+    font-size: 2.8rem;
   }
-  
+
 
   &--large {
     font-size: $font-size-lg;
+    @include media-breakpoint-between(sm, md) {
+      font-size: 2.65rem;
+    }
+    @include media-breakpoint-down(sm) {
+      font-size: 2.3rem;
+    }
   }
 
   &--medium {
